syntax = "proto3";

package fl_net;

service FederatedLearningService {

  rpc RegisterClient(RegisterRequest) returns (ClientInfo) {}

  rpc ScheduleLearningIteration(stream StoreIDs) returns (stream ScheduleRequest) {}
}

message RegisterRequest {
  int32 model_size = 1;
}

message ClientInfo {
  int32 client_id = 1;
  string token = 2;
  int32 num_parties = 3;
}

// For the first iteration the ScheduleResponse has a store_id = token
message StoreIDs {
  string store_id = 1;
  string party_id = 2;
  string token = 3;
  int32 batch_id = 4;
}

message ScheduleRequest{
  string program_id = 1;
  string user_id = 2;
  int32 batch_size = 3;
  int32 num_parties = 4;
}